--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,7 @@
 	"browser_action": {
 		"default_icon": "img/icon16.png",
 		"default_popup": "index.html"
-	}
+	},
+
+	"permissions": ["tabs", "storage"]
 }
